<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.gdd.sage</groupId>
  <artifactId>sage-jena-volcano</artifactId>
  <packaging>jar</packaging>
  <version>0.0.1</version>
  <name>sage-jena-volcano</name>
  <url>http://maven.apache.org</url>

  <dependencies>
    <dependency> <!-- makes use of already implem'd for compilation targeting jena -->
      <groupId>fr.gdd.sage</groupId>
      <artifactId>sage-jena-tdb2</artifactId>
      <version>0.0.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>apache-jena-libs</artifactId>
      <version>4.7.0</version>
      <type>pom</type>
    </dependency>    
    <dependency> <!-- logger of jena -->
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.6</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.6</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <filtering>false</filtering>
        <!-- contains a META-INF that automatically
             registers SageModule in the life cycle -->
        <directory>src/main/resources</directory>
      </resource> 
    </resources>
    
    <plugins>
      <plugin>
        <!-- mvn dependency:build-classpath -Dmdep.outputFile=cp.txt -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.9</version>
        <executions>
          <execution>
            <id>build-classpath</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>build-classpath</goal>
            </goals>
            <configuration>
              <!-- configure the plugin here -->
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>fr.gdd.sage.FusekiApp</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>fr.gdd.sage.FusekiApp</mainClass>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
</project>
